--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,33 +1,161 @@
-<div class="example-container ">
-    <p>Home</p>
-   <div class="row">
-       <div class="col-6 col-sm-4">
+<div class="container-fluid p-5 ">
+
+  <div class="row">
+    <div class="col-6 col-sm-4">
+      <div class="container tarjeta">
+
+        <span class="material-icons md-48 icono-img orange ">
+          room_service
+        </span>
         <mat-card class="example-card">
-            <mat-card-title-group>
-              <mat-card-title><strong>Bienvenido </strong>{{this.datos.Nombre}}</mat-card-title>
-              <mat-card-subtitle><strong>Apellido:</strong>{{this.datos.Apellido}}</mat-card-subtitle>
-              <mat-card-subtitle><strong>Carnet:</strong>{{this.datos.CI}}</mat-card-subtitle>
-              <mat-card-subtitle><strong>Fecha de nacimiento:</strong>{{this.datos.Fecha_nacimiento}}</mat-card-subtitle>
-             
-              <img mat-card-sm-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
-            </mat-card-title-group>
-            <mat-card-content>
-              
-            </mat-card-content>
-          </mat-card>
-       </div>
-       <div class="col-6 col-sm-4">
+          <div class="row modelar">
+            <div class="col-sm-8">
+              <mat-card-title style="margin-top: 40px;">Categorias de productos</mat-card-title>
+
+            </div>
+            <div class="col-sm-4">
+              <h1 style="font-size:70px;text-align: center;">6</h1>
+            </div>
+          </div>
+
+
+          <mat-card-actions>
+            <button mat-button>Mas Información</button>
+
+          </mat-card-actions>
+
+        </mat-card>
+        <br>
+
+      </div>
+    </div>
+    <div class="col-6 col-sm-4">
+      <div class="container tarjeta">
+
+        <span class="material-icons md-48 icono-img green">
+          price_check
+        </span>
         <mat-card class="example-card">
-            <mat-card-title-group>
-              <mat-card-title>Shiba Inu</mat-card-title>
-              <mat-card-subtitle>Small</mat-card-subtitle>
-              <img mat-card-sm-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
-            </mat-card-title-group>
-            <mat-card-content>
-              
-            </mat-card-content>
-          </mat-card>
-       </div>
-   </div>
-    <button (click)="ver()">ver</button>
+          <div class="row modelar">
+            <div class="col-sm-8">
+              <mat-card-title style="margin-top: 40px;">Ventas realizadas</mat-card-title>
+
+            </div>
+            <div class="col-sm-4">
+              <h1 style="font-size:70px;text-align: center;">50</h1>
+            </div>
+          </div>
+
+
+          <mat-card-actions>
+            <button mat-button>Mas Información</button>
+
+          </mat-card-actions>
+
+        </mat-card>
+        <br>
+
+      </div>
+    </div>
+    <div class="col-6 col-sm-4">
+      <div class="container tarjeta">
+
+        <span class="material-icons md-48 icono-img red">
+          table_bar
+        </span>
+        <mat-card class="example-card">
+          <div class="row modelar">
+            <div class="col-sm-8">
+              <mat-card-title style="margin-top: 40px;">Mesas Disponibles</mat-card-title>
+
+            </div>
+            <div class="col-sm-4">
+              <h1 style="font-size:70px;text-align: center;">9</h1>
+            </div>
+          </div>
+
+
+          <mat-card-actions>
+            <button mat-button>Mas Información</button>
+
+          </mat-card-actions>
+
+        </mat-card>
+        <br>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+
+    <div class="col-sm-7 col-sm-auto">
+      <mat-card class="example-card" >
+        <mat-card-title class="purple" style="font-size: 1rem;">Lista de reservas</mat-card-title>
+        <mat-card-content>
+       
+          
+          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+          
+            <!-- Position Column -->
+            <ng-container matColumnDef="position">
+              <th mat-header-cell *matHeaderCellDef> No. </th>
+              <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            </ng-container>
+          
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> Name </th>
+              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+          
+            <!-- Weight Column -->
+            <ng-container matColumnDef="weight">
+              <th mat-header-cell *matHeaderCellDef> Weight </th>
+              <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            </ng-container>
+          
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="symbol">
+              <th mat-header-cell *matHeaderCellDef> Symbol </th>
+              <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            </ng-container>
+          
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          
+            <!-- Row shown when there is no matching data. -->
+        
+          </table>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>Mas informacion</button>
+
+        </mat-card-actions>
+      </mat-card>
+    </div>
+    <div class="col-sm-5 col-sm-auto">
+
+      <mat-card class="example-card">
+        <mat-card-header>
+         <img src="../../../assets/imagenes/papa-emeritus-ghost.jpg" class="mat-card-avatar"alt="">
+          <mat-card-title>{{datos.Nombre}}  {{datos.Apellido}}</mat-card-title>
+          <mat-card-subtitle>CI:{{datos.CI}}</mat-card-subtitle>
+        </mat-card-header>
+        
+        <mat-card-content>
+          <p>
+            SOMOS UNA EMPRESA CON AÑOS DE EXPERIENCIA EN LA ELABORACION DE SABROSAS EMPANADAS...PRUEBALAS!!!!!
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          
+          <button mat-button>Opciones</button>
+        </mat-card-actions>
+      </mat-card>
+
+
+    </div>
+  </div>
+
 </div>
