--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
 
             </div>
             <div class="col-sm-4">
-              <h1 style="font-size:70px;text-align: center;">6</h1>
+              <h1 style="font-size:70px;text-align: center;">{{this.tamanoproducto}}</h1>
             </div>
           </div>
 
@@ -98,27 +98,35 @@
           <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
           
             <!-- Position Column -->
-            <ng-container matColumnDef="position">
-              <th mat-header-cell *matHeaderCellDef> No. </th>
-              <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            <ng-container matColumnDef="Fecha">
+              <th mat-header-cell *matHeaderCellDef> Fecha. </th>
+              <td mat-cell *matCellDef="let element"> {{element.Fecha}} </td>
             </ng-container>
           
             <!-- Name Column -->
-            <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef> Name </th>
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <ng-container matColumnDef="informacion">
+              <th mat-header-cell *matHeaderCellDef> Informacion </th>
+              <td mat-cell *matCellDef="let element"> {{element.informacion}} </td>
             </ng-container>
           
             <!-- Weight Column -->
-            <ng-container matColumnDef="weight">
-              <th mat-header-cell *matHeaderCellDef> Weight </th>
-              <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            <ng-container matColumnDef="usuario">
+              <th mat-header-cell *matHeaderCellDef> Encargado </th>
+              <td mat-cell *matCellDef="let element"> {{element.usuario}} </td>
             </ng-container>
           
             <!-- Symbol Column -->
-            <ng-container matColumnDef="symbol">
-              <th mat-header-cell *matHeaderCellDef> Symbol </th>
-              <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            <ng-container matColumnDef="Producto">
+              <th mat-header-cell *matHeaderCellDef> Nombre Producto </th>
+              <td mat-cell *matCellDef="let element"> {{element.Producto}} </td>
+            </ng-container>
+            <ng-container matColumnDef="nombre_mesa">
+              <th mat-header-cell *matHeaderCellDef> Mesa </th>
+              <td mat-cell *matCellDef="let element"> {{element.nombre_mesa}} </td>
+            </ng-container>
+            <ng-container matColumnDef="cliente">
+              <th mat-header-cell *matHeaderCellDef> Cliente </th>
+              <td mat-cell *matCellDef="let element"> {{element.cliente}} </td>
             </ng-container>
           
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -138,15 +146,17 @@
 
       <mat-card class="example-card">
         <mat-card-header>
-         <img src="../../../assets/imagenes/papa-emeritus-ghost.jpg" class="mat-card-avatar"alt="">
-          <mat-card-title>{{datos.Nombre}}  {{datos.Apellido}}</mat-card-title>
-          <mat-card-subtitle>CI:{{datos.CI}}</mat-card-subtitle>
+         <img src="{{datauser?.Foto}}" class="mat-card-avatar"alt="">
+          <mat-card-title>{{datauser?.Nombre}}  {{datauser?.Apellido}}</mat-card-title>
+          <mat-card-subtitle>CI:{{datauser?.CI}}</mat-card-subtitle>
         </mat-card-header>
         
         <mat-card-content>
           <p>
             SOMOS UNA EMPRESA CON AÑOS DE EXPERIENCIA EN LA ELABORACION DE SABROSAS EMPANADAS...PRUEBALAS!!!!!
           </p>
+
+          
         </mat-card-content>
         <mat-card-actions>
           
