--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -39,8 +39,27 @@
             </button>
             <button mat-button [routerLinkActive]="['class1']" routerLink="/panel" class="menu-button">
                 <mat-icon>person</mat-icon>
-                <span>Users</span>
+                <span>Cuenta</span>
             </button>
+            <button mat-button [routerLinkActive]="['class1']" routerLink="/lista-reservas" class="menu-button">
+                <mat-icon>content_paste</mat-icon>
+                <span>lista-reservas</span>
+            </button>
+            <button mat-button [routerLinkActive]="['class1']" routerLink="/lista-mesa" class="menu-button">
+                <mat-icon>table_restaurant</mat-icon>
+                <span>lista-mesa</span>
+            </button>
+            <button mat-button [routerLinkActive]="['class1']" routerLink="/lista-cliente" class="menu-button">
+                <mat-icon>fact_check</mat-icon>
+                <span>lista-cliente</span>
+            </button>
+            <button mat-button [routerLinkActive]="['class1']" routerLink="/lista-producto" class="menu-button">
+                <mat-icon>inventory_2</mat-icon>
+                <span>lista-producto</span>
+            </button>
+
+
+            
         </div>
         <!-- <div *ngIf="decrypted == 'Publicador'">
             <button mat-button [routerLinkActive]="['class1']" routerLink="/home" class="menu-button">
