--- a/src/app/components/lista-producto/modalproducto.html
+++ b/src/app/components/lista-producto/modalproducto.html
@@ -75,7 +75,7 @@
     -->
     </div>
     <div mat-dialog-actions>
-        <button mat-button>Cancelar</button>
+        <button mat-button (click)="onNoClick()"> Cancelar</button>
         <button class="btn-block" (click)="actualizar();" >
             Editar
           
