--- a/src/app/components/lista-producto/lista-producto.component.html
+++ b/src/app/components/lista-producto/lista-producto.component.html
@@ -10,7 +10,7 @@
 
             <div class="container">
                 <mat-form-field appearance="standard">
-                    <mat-label>Filter</mat-label>
+                    <mat-label>Buscador</mat-label>
                     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
                   </mat-form-field>
                   
