--- a/src/app/components/lista-producto/nuevo-producto.html
+++ b/src/app/components/lista-producto/nuevo-producto.html
@@ -8,9 +8,7 @@
         <div class="editfoto">
             <img src="{{dataproducto?.Foto}}" alt="" style="width: 70%;
         display: block;
-        align-items: center;
-        
-        box-shadow: 0 16px 38px -12px rgb(0 0 0 / 56%), 0 4px 25px 0 rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(0 0 0 / 20%);
+        align-items: center;box-shadow: 0 16px 38px -12px rgb(0 0 0 / 56%), 0 4px 25px 0 rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(0 0 0 / 20%);
         ;" class="avatar" width="">
 
 
