--- a/src/app/components/lista-mesas/lista-mesas.component.css
+++ b/src/app/components/lista-mesas/lista-mesas.component.css
@@ -23,3 +23,19 @@
     padding: 5px;
     box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(244 67 54 / 40%);
 }
+
+.mat-paginator-container {
+    display: flex !important;
+    justify-content: flex-end !important;
+    padding: 0 8px !important;
+    flex-wrap: nowrap !important;
+    width: 100% !important;
+}
+.contendor-flex
+{
+    display: inline-flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
