--- a/src/app/components/lista-mesas/reservar-mesa.html
+++ b/src/app/components/lista-mesas/reservar-mesa.html
@@ -1,1 +1,80 @@
-<div class="container"></div>
+<div class="container">
+    <h1>Reserva de la mesa {{datamesa.Id}}</h1>
+
+    <div class="row">
+        <div class="col-sm-5">
+            <h3>Datos de clientes</h3>
+            <hr>
+          <div class="contendor-flex" >
+            <mat-form-field appearance="standard">
+                <mat-label>Buscador</mat-label>
+                <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+             
+            </mat-form-field>
+            
+            <button mat-raised-button color="primary" (click)="nuevocliente()"><span class="material-icons">
+                person_add
+                </span></button>
+          </div>
+            <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource" matSort>
+
+                    <!-- Progress Column -->
+                    <ng-container matColumnDef="Id">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> id </th>
+                        <td mat-cell *matCellDef="let row"> {{row.idcliente}}</td>
+                    </ng-container>
+                    <!-- ID Column -->
+                    <ng-container matColumnDef="CI">
+                        <th class="col-id" mat-header-cell *matHeaderCellDef mat-sort-header> Carnet </th>
+                        <td mat-cell *matCellDef="let row"> {{row.CI}} </td>
+                    </ng-container>
+
+
+                    <!-- Progress Column -->
+                    <ng-container matColumnDef="Nombre">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+                        <td mat-cell *matCellDef="let row"> {{row.Nombre}}</td>
+                    </ng-container>
+
+                    <!-- Name Column -->
+                 
+                    <ng-container matColumnDef="Apellido">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellido </th>
+                        <td mat-cell *matCellDef="let row"> {{row.Apellido}}</td>
+                    </ng-container>
+                    <!-- Fruit Column -->
+
+                    <ng-container matColumnDef="Acciones">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
+                        <td mat-cell *matCellDef="let row">
+
+                            <div class="contenedor" style="display: flex;">
+                                <button mat-raised-button color="primary">Seleccionar</button>
+
+
+                            </div>
+
+
+
+
+                        </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+                    <!-- Row shown when there is no matching data. -->
+                    <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell" colspan="4">El siguiente dato no se encontro: "{{input.value}}"</td>
+                    </tr>
+                </table>
+
+                <mat-paginator [pageSizeOptions]="[2]" aria-label="Seleccionar página de clientes"></mat-paginator>
+            </div>
+
+        </div>
+        <div class="col-sm-3"></div>
+        <div class="col-sm-4"></div>
+    </div>
+</div>
