--- a/src/app/components/lista-mesas/reservar-mesa.html
+++ b/src/app/components/lista-mesas/reservar-mesa.html
@@ -2,20 +2,20 @@
     <h1>Reserva de la mesa {{datamesa.Id}}</h1>
 
     <div class="row">
-        <div class="col-sm-5">
+        <div class="col-sm-5" *ngIf="!seleccionar">
             <h3>Datos de clientes</h3>
             <hr>
-          <div class="contendor-flex" >
-            <mat-form-field appearance="standard">
-                <mat-label>Buscador</mat-label>
-                <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-             
-            </mat-form-field>
-            
-            <button mat-raised-button color="primary" (click)="nuevocliente()"><span class="material-icons">
-                person_add
-                </span></button>
-          </div>
+            <div class="contendor-flex">
+                <mat-form-field appearance="standard">
+                    <mat-label>Buscador</mat-label>
+                    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+
+                </mat-form-field>
+
+                <button mat-raised-button color="primary" (click)="nuevocliente()"><span class="material-icons">
+                        person_add
+                    </span></button>
+            </div>
             <div class="mat-elevation-z8">
                 <table mat-table [dataSource]="dataSource" matSort>
 
@@ -38,7 +38,7 @@
                     </ng-container>
 
                     <!-- Name Column -->
-                 
+
                     <ng-container matColumnDef="Apellido">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellido </th>
                         <td mat-cell *matCellDef="let row"> {{row.Apellido}}</td>
@@ -50,7 +50,8 @@
                         <td mat-cell *matCellDef="let row">
 
                             <div class="contenedor" style="display: flex;">
-                                <button mat-raised-button color="primary">Seleccionar</button>
+                                <button mat-raised-button color="primary"
+                                    (click)="anadir(row.idcliente)">Seleccionar</button>
 
 
                             </div>
@@ -74,7 +75,73 @@
             </div>
 
         </div>
-        <div class="col-sm-3"></div>
-        <div class="col-sm-4"></div>
+        <div class="col-sm-3" *ngIf="seleccionar">
+
+            <button (click)="atras()" mat-mini-fab color="accent" aria-label="Example icon button with a plus one icon">
+                <mat-icon>keyboard_backspace</mat-icon>
+            </button>
+            <p><strong>Nombre:</strong> {{this.datosidcliente.Nombre}}</p>
+            <p><strong>Apellido:</strong> {{this.datosidcliente.Apellido}}</p>
+            <p><strong>Carnet:</strong> {{this.datosidcliente.CI}}</p>
+
+            <hr>
+            <form [formGroup]="lg" class="example-form">
+                <div mat-dialog-content style="display: flex;align-items: center;">
+                    <!-- <mat-form-field style="width: 100%;">
+                        <mat-label>Carnet de identidad</mat-label>
+                        <input matInput    placeholder="{{datauser?.id}} formControlName="ci">
+                        
+                    </mat-form-field> -->
+                 
+            
+            
+                    <div>
+            
+                       
+                       <form [formGroup]="lg">
+                        <mat-form-field appearance="fill">
+                            <mat-label>Nombre</mat-label>
+                            <mat-select  (selectionChange)="onChange($event.value)"  formControlName="Nombre" >
+                              <mat-option  *ngFor="let producto of datosproductos"  [value]="producto">{{producto.Nombre}}</mat-option>
+                            </mat-select>
+                          </mat-form-field>
+                          <mat-form-field appearance="fill">
+                            <mat-label>Cantidad</mat-label>
+                            <mat-select  (selectionChange)="onChangecantidad($event.value)"  formControlName="Cantidad" >
+                              <mat-option  value=1>1</mat-option>
+                              <mat-option  value=2>2</mat-option>
+                              <mat-option  value=3>3</mat-option>
+                              <mat-option  value=4>4</mat-option>
+                              <mat-option  value=5>5</mat-option>
+                            </mat-select>
+                          </mat-form-field>
+                       </form>
+                       
+                      
+                    </div>
+            
+            
+            
+            
+                </div>
+                <div mat-dialog-actions>
+                    <button mat-button (click)="onNoClick()">Cancelar</button>
+                    <button class="btn-block" mat-raised-button color="accent" (click)="anadirlista()" >
+                        añadir producto
+            
+                    </button>
+                </div>
+            </form>
+        </div>
+        <div class="col-sm-4">
+            <div *ngIf="lista">
+                <div class="row" *ngFor="let mostrarlista of lista">
+                    <div class="col-sm-4">Nombre <br>{{mostrarlista.nombre}}</div>
+                    <div class="col-sm-3">Cantidad <br> {{mostrarlista.cantidad}}</div>
+                    <div class="col-sm-3">Precio <br> {{mostrarlista.costo}}</div>
+                   
+                </div>
+            </div>
+        </div>
     </div>
 </div>
