--- a/src/app/components/lista-mesas/nuevo-mesa.html
+++ b/src/app/components/lista-mesas/nuevo-mesa.html
@@ -28,7 +28,7 @@
     </div>
     <div mat-dialog-actions>
         <button class="btn-block" mat-raised-button color="accent" (click)="anadir()">
-            Añadir nuevo cliente
+            Añadir nueva mesa
 
         </button>
     </div>
