--- a/src/app/components/lista-reservas/lista-reservas.component.html
+++ b/src/app/components/lista-reservas/lista-reservas.component.html
@@ -1,1 +1,73 @@
-<p>lista-reservas works!</p>
+<div class="container">
+    <mat-form-field appearance="standard">
+        <mat-label>Buscador</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+      </mat-form-field>
+      
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
+      
+          <!-- ID Column -->
+          <ng-container matColumnDef="Reservaid">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Foto </th>
+            <td mat-cell *matCellDef="let row"> <img src="{{row.Reservaid}}" width="50px" alt=""></td>
+          </ng-container>
+          <ng-container matColumnDef="Fecha_reserva">
+            <th class="col-id" mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let row"> {{row.Fecha}} </td>
+          </ng-container>
+      
+          <!-- Progress Column -->
+          
+      
+          <!-- Name Column -->
+          <ng-container matColumnDef="Usuario_CI">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Foto </th>
+            <td mat-cell *matCellDef="let row"> <img src="{{row.usuario}}" width="50px" alt=""></td>
+          </ng-container>
+          <ng-container matColumnDef="idcliente">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Foto </th>
+            <td mat-cell *matCellDef="let row"> <img src="{{row.cliente}}" width="50px" alt=""></td>
+          </ng-container>
+          <ng-container matColumnDef="mesaid">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Foto </th>
+            <td mat-cell *matCellDef="let row"> <img src="{{row.nombre_mesa}}" width="50px" alt=""></td>
+          </ng-container>
+          
+          <!-- Fruit Column -->
+          <ng-container matColumnDef="total">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
+            <td mat-cell *matCellDef="let row"> {{row.total}} </td>
+          </ng-container>
+    
+          
+          <ng-container matColumnDef="Acciones">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
+            <td mat-cell *matCellDef="let row"> 
+               
+                <div class="contenedor" style="display: flex;">
+                    <mat-icon  matTooltip="Editar" class="iconbtn" aria-hidden="false" aria-label="Example home icon" (click)="detalle(row.Reserva_info);">detalle</mat-icon>
+                    
+
+                   
+                
+                </div>
+
+
+
+
+             </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">El siguiente dato no se encontro: "{{input.value}}"</td>
+          </tr>
+        </table>
+      
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+      </div>
+</div>
