--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
         <mat-menu #menu="matMenu">
             <button (click)="cerrar()" mat-menu-item>
                 <mat-icon>logout</mat-icon>
-                <span>Logout</span>
+                <span>Salir</span>
             </button>
         </mat-menu>
     </mat-toolbar-row>
