--- a/src/app/components/lista-cliente/lista-cliente.component.html
+++ b/src/app/components/lista-cliente/lista-cliente.component.html
@@ -1,1 +1,64 @@
-<p>lista-cliente works!</p>
+<div class="container">
+    <mat-form-field appearance="standard">
+        <mat-label>Buscador</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+      </mat-form-field>
+      
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort style="width:100% ;">
+      
+          <!-- ID Column -->
+          <ng-container matColumnDef="idcliente">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Carnet </th>
+            <td mat-cell *matCellDef="let row"> {{row.idcliente}}</td>
+          </ng-container>
+          <ng-container matColumnDef="Nombre">
+            <th class="col-id" mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+            <td mat-cell *matCellDef="let row"> {{row.Nombre}} </td>
+          </ng-container>
+      
+          <!-- Progress Column -->
+          
+      
+          <!-- Name Column -->
+          <ng-container matColumnDef="CI">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Carnet </th>
+            <td mat-cell *matCellDef="let row"> {{row.CI}}</td>
+          </ng-container>
+          <ng-container matColumnDef="Apellido">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellido </th>
+            <td mat-cell *matCellDef="let row"> {{row.Apellido}}</td>
+          </ng-container>
+         
+    
+          
+          <ng-container matColumnDef="Acciones">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>  Acciones </th>
+            <td mat-cell *matCellDef="let row"> 
+               
+                <div class="contenedor" style="display: flex;">
+                   
+                    
+                    <button mat-raised-button color="primary" (click)="detalle(row);" >Ver detalles</button>
+                   
+                   
+                </div>
+
+
+
+
+             </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">El siguiente dato no se encontro: "{{input.value}}"</td>
+          </tr>
+        </table>
+      
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+      </div>
+</div>
