--- a/src/app/components/lista-reservas/lista-reservas.component.html
+++ b/src/app/components/lista-reservas/lista-reservas.component.html
@@ -5,15 +5,15 @@
       </mat-form-field>
       
       <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>
+        <table mat-table [dataSource]="dataSource" matSort style="width:100% ;">
       
           <!-- ID Column -->
           <ng-container matColumnDef="Reservaid">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Foto </th>
-            <td mat-cell *matCellDef="let row"> <img src="{{row.Reservaid}}" width="50px" alt=""></td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let row"> {{row.idreserva}}</td>
           </ng-container>
           <ng-container matColumnDef="Fecha_reserva">
-            <th class="col-id" mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <th class="col-id" mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de reserva </th>
             <td mat-cell *matCellDef="let row"> {{row.Fecha}} </td>
           </ng-container>
       
@@ -22,35 +22,35 @@
       
           <!-- Name Column -->
           <ng-container matColumnDef="Usuario_CI">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Foto </th>
-            <td mat-cell *matCellDef="let row"> <img src="{{row.usuario}}" width="50px" alt=""></td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> C.I Encargado </th>
+            <td mat-cell *matCellDef="let row"> {{row.usuario}}</td>
           </ng-container>
           <ng-container matColumnDef="idcliente">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Foto </th>
-            <td mat-cell *matCellDef="let row"> <img src="{{row.cliente}}" width="50px" alt=""></td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> C.I Cliente </th>
+            <td mat-cell *matCellDef="let row"> {{row.cliente}}</td>
           </ng-container>
           <ng-container matColumnDef="mesaid">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Foto </th>
-            <td mat-cell *matCellDef="let row"> <img src="{{row.nombre_mesa}}" width="50px" alt=""></td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Mesa </th>
+            <td mat-cell *matCellDef="let row"> {{row.nombre_mesa}}</td>
           </ng-container>
           
           <!-- Fruit Column -->
           <ng-container matColumnDef="total">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
-            <td mat-cell *matCellDef="let row"> {{row.total}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Total </th>
+            <td mat-cell *matCellDef="let row"> {{row.total}}bs </td>
           </ng-container>
     
           
           <ng-container matColumnDef="Acciones">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>  Acciones </th>
             <td mat-cell *matCellDef="let row"> 
                
                 <div class="contenedor" style="display: flex;">
-                    <mat-icon  matTooltip="Editar" class="iconbtn" aria-hidden="false" aria-label="Example home icon" (click)="detalle(row.Reserva_info);">detalle</mat-icon>
-                    
-
                    
-                
+                    
+                    <button mat-raised-button color="primary" (click)="detalle(row);" >Ver detalles</button>
+                   
+                   
                 </div>
 
 
