--- a/src/app/components/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/components/inicio-sesion/inicio-sesion.component.html
@@ -1,12 +1,13 @@
+<div class="bg"></div>
 <mat-toolbar color="primary" class="app-header">
-    <div class="positronx">Imb</div>
+    <div class="positronx">Bienvenido al panel administrativo de las chachas</div>
 </mat-toolbar>
 
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
 
-    <mat-card class="child box">
-        <mat-card-header>
-            <mat-card-title>Iniciar Sesión</mat-card-title>
+    <mat-card class="child box" style="width: 50% !important;">
+        <mat-card-header style="width:100% ;">
+            <mat-card-title style="font-size:1.5rem ;">Iniciar Sesión</mat-card-title>
         </mat-card-header>
         <br>
 
