--- a/src/app/components/lista-mesas/lista-mesas.component.html
+++ b/src/app/components/lista-mesas/lista-mesas.component.html
@@ -11,7 +11,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col col-sm-3" *ngFor="let mesas of datosmesas">
-                        <mat-card class="example-card">
+                        <mat-card class="example-card m-4">
                             <span class="material-icons md-24">
                                 table_bar
                             </span>
