--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -8,8 +8,8 @@
                 close
             </mat-icon>
         </button>
-        <span>Admin</span>
-        <!-- <img src="" alt="" style="width: 150px;"> -->
+       
+        <img src="../../../assets/imagenes/logo.png.crdownload" alt="" style="width: 130px;">
         <span class="example-spacer"></span>
         <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
             <mat-icon>more_vert</mat-icon>
@@ -57,6 +57,10 @@
                 <mat-icon>inventory_2</mat-icon>
                 <span>lista-producto</span>
             </button>
+            <!-- <button mat-button [routerLinkActive]="['class1']" routerLink="/lista-usuarios" class="menu-button">
+                <mat-icon>inventory_2</mat-icon>
+                <span>lista-usuarios</span>
+            </button> -->
 
 
             
