--- a/src/app/components/lista-producto/lista-producto.component.html
+++ b/src/app/components/lista-producto/lista-producto.component.html
@@ -1,4 +1,6 @@
 <div class="example-container">
+    <img [innerHTML]="this.prueba" src="{{this.prueba}}" alt="">
+
     <div class="row p-3">
         <div class="col-sm-12">
             <button mat-raised-button color="warn" (click)="anadir()">Añadir nuevo producto</button>
