--- a/src/app/components/lista-producto/lista-producto.component.html
+++ b/src/app/components/lista-producto/lista-producto.component.html
@@ -34,7 +34,7 @@
                       <!-- Name Column -->
                       <ng-container matColumnDef="Foto">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Foto </th>
-                        <td mat-cell *matCellDef="let row"> <img src="{{row.Foto}}" width="50px" alt=""></td>
+                        <td mat-cell *matCellDef="let row"> <img src="../../../assets/imagenes/5100421.png" width="50px" alt=""> </td>
                       </ng-container>
                   
                       <!-- Fruit Column -->
