--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
             </mat-icon>
         </button>
        
-        <img src="../../../assets/imagenes/logo.png.crdownload" alt="" style="width: 130px;">
+        <img src="../../../assets/imagenes/logo.png" alt="" style="width: 130px;">
         <span class="example-spacer"></span>
         <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
             <mat-icon>more_vert</mat-icon>
@@ -31,8 +31,8 @@
         <p *ngIf="decrypted == 'Publicador'" class="designation">Publicador</p>
 
         <mat-divider></mat-divider>
-        <!-- <div *ngIf="decrypted == 'Administrador'"> -->
-            <div>
+        <div *ngIf="datauser.Cargo == 'Administrador'">
+           
             <button mat-button [routerLinkActive]="['class1']" routerLink="/home" class="menu-button">
                 <mat-icon>home</mat-icon>
                 <span>Home</span>
@@ -65,12 +65,20 @@
 
             
         </div>
-        <!-- <div *ngIf="decrypted == 'Publicador'">
-            <button mat-button [routerLinkActive]="['class1']" routerLink="/home" class="menu-button">
-                <mat-icon>home</mat-icon>
-                <span>Home</span>
+        <div *ngIf="datauser.Cargo == 'Empleado'">
+            <button mat-button [routerLinkActive]="['class1']" routerLink="/panel" class="menu-button">
+                <mat-icon>person</mat-icon>
+                <span>Cuenta</span>
             </button>
-        </div> -->
+            <button mat-button [routerLinkActive]="['class1']" routerLink="/lista-mesa" class="menu-button">
+                <mat-icon>table_restaurant</mat-icon>
+                <span>lista-mesa</span>
+            </button>
+            <button mat-button [routerLinkActive]="['class1']" routerLink="/lista-reservas" class="menu-button">
+                <mat-icon>content_paste</mat-icon>
+                <span>lista-reservas</span>
+            </button>
+        </div>
         <mat-divider></mat-divider>
 
     </mat-sidenav>
