--- a/src/app/components/lista-cliente/lista-cliente.component.html
+++ b/src/app/components/lista-cliente/lista-cliente.component.html
@@ -9,7 +9,7 @@
       
           <!-- ID Column -->
           <ng-container matColumnDef="idcliente">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Carnet </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
             <td mat-cell *matCellDef="let row"> {{row.idcliente}}</td>
           </ng-container>
           <ng-container matColumnDef="Nombre">
