--- a/src/app/components/lista-mesas/lista-mesas.component.html
+++ b/src/app/components/lista-mesas/lista-mesas.component.html
@@ -38,7 +38,7 @@
                                 <button mat-stroked-button (click)="eliminar(mesas)" color="warn" style="text-align:center ; text-align: center; display: flex; justify-content: space-between;">
                                     <span class="material-icons" style="font-size:17px ;">
                                         delete
-                                    </span>eliminar</button>
+                                    </span>Eliminar</button>
 
                             </mat-card-actions>
                         </mat-card>
